--- a/sources/testapp/templates/service.yaml
+++ b/sources/testapp/templates/service.yaml
@@ -1,15 +1,20 @@
----
 apiVersion: v1
 kind: Service
 metadata:
-  name: nginx
+  name: {{ .Values.appname }}
   namespace: {{ .Release.Namespace }}
   labels:
-    app: nginx
+    app: {{ .Values.appname }}
+  annotations:
+     service.beta.kubernetes.io/aws-load-balancer-backend-protocol: http
+     service.beta.kubernetes.io/aws-load-balancer-connection-draining-enabled: "true"
+     service.beta.kubernetes.io/aws-load-balancer-cross-zone-load-balancing-enabled: "true"
 spec:
-  clusterIP: None
+  type: LoadBalancer
   ports:
-  - port: 80
-    name: http
+  - name: http
+    port: 80
+    targetPort: 80
+    protocol: HTTP
   selector:
     app: {{ .Values.appname }}
