--- a/sources/testapp/templates/service.yaml
+++ b/sources/testapp/templates/service.yaml
@@ -15,6 +15,6 @@ spec:
   - name: http
     port: 80
     targetPort: 80
-    protocol: HTTP
+    protocol: TCP
   selector:
     app: {{ .Values.appname }}
